@@ -25,6 +25,8 @@ Contributions:
      
     * Francisco Sam Castillo -- QAdmin-TMDA web management utility.
 
+    * Arcady Genkin -- creator/maintainer of the Gentoo Linux Package.
+
     * Lou Hevly -- documentation (vpopmail tutorial).
 
     * Brian Lalor -- testing the initial Sendmail support; bugfixes.
