@@ -10,11 +10,14 @@ latest release</a> as a gzipped tarball.
 
 <u>Packages:</u><br>
 <ul>
-<li>Linux RPM: See the <a href="install.html">installation</a> page for how to 
+<li>RedHat Linux RPM: See the <a href="install.html">installation</a> page for how to 
 easily build an RPM directly from the source tarball.<br><br>
 
 <li><a href="http://packages.debian.org/python2-tmda" TARGET="Resource Window">
 Debian Linux Package</a><br><br>
+
+<li><a href="http://www.gentoo.org/cgi-bin/viewcvs.cgi/gentoo-x86/net-mail/tmda/" 
+TARGET="Resource Window">Gentoo Linux Package</a><br><br>
 
 <li>If you run FreeBSD, TMDA is part of the "ports" collection
 <a href="http://www.freebsd.org/cgi/ports.cgi?query=tmda&stype=name" TARGET="Resource Window">(mail/tmda)</a>
