@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Thu Jan 24 14:12:50 2002 -->
+<!-- Sat Feb  9 18:58:35 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -160,9 +160,9 @@ installs.
 </pre></blockquote>
 </ol>
 
-<u>Installation from Linux RPMs</u><br><br>
+<u>Installation from RedHat Linux RPMs</u><br><br>
 
-If you are running Linux, you may wish to install TMDA via RPM
+If you are running RedHat Linux, you may wish to install TMDA via RPM
 instead.  A binary RPM can be built and installed directly from the source
 tarball:
 
