@@ -1,3 +1,8 @@
+2002-02-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* download.ht (Links): Link to Arcady Genkin's Gentoo Linux
+	package.
+	
 2002-02-05  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* faq.ht: New entry: "Why isn't TMDA written in Perl, C, C++,
