@@ -1,3 +1,7 @@
+2002-02-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* THANKS (Contributions): Add Arcady Genkin.
+
 2002-02-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* TMDA 0.46 is released.
